--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "es2022",
     "target": "es2022",
-    "lib": ["es2022"],
+    "lib": ["es2022", "dom", "dom.iterable"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowUnreachableCode": false,
@@ -11,7 +11,14 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./web/src/*"],
+      "~/*": ["./*"],
+      "@common/*": ["./src/common/*"]
+    },
+    "types": ["@types/node"]
   },
   "include": ["./src", "./web"]
 }
